# Mindflayer

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DOCKER_TESTING.md  Dockerfile  LNBits.readme.txt  LOCAL_TESTING.md  README.md  README_TESTING.md  SECURITY.md  TESTING_QUICKSTART.md  TEST_RESULTS.md  docker-compose.yml  optionsinfo.txt  pyproject.toml
deploy/: DEPLOYMENT.md  install.sh  update.sh
scripts/: install.sh  orange-shell.sh  test-docker-quick.sh  test-docker.sh  test-full-flow.sh  test-local-quick.sh  test-security-local.sh
src/orange_nethack/: cli.py  config.py  database.py  email.py  models.py
src/orange_nethack/api/: limiter.py  main.py  routes.py  terminal.py  webhooks.py
src/orange_nethack/game/: monitor.py  payout.py  xlogfile.py
src/orange_nethack/lightning/: lnbits.py  strike.py
src/orange_nethack/users/: manager.py
systemd/: orange-nethack-api.service  orange-nethack-monitor.service
tests/: conftest.py  test_api.py  test_database.py  test_lightning.py  test_users.py  test_xlogfile.py
web/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
web/src/: App.tsx  index.css
web/src/api/: client.ts
web/src/components/: AchievementIcons.tsx  AsciiLogo.tsx  ConductIcons.tsx  CopyButton.tsx  Layout.tsx  LoadingSpinner.tsx  PotDisplay.tsx  StatusBadge.tsx  Terminal.tsx  Tooltip.tsx  index.ts
web/src/hooks/: index.ts  useCopyToClipboard.ts  usePot.ts  useSession.ts  useStats.ts
web/src/pages/: LandingPage.tsx  PlayPage.tsx  SessionPage.tsx  StatsPage.tsx  TerminalPage.tsx  index.ts
(+1 files in other folders)
