[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orange-nethack"
version = "0.1.0"
description = "Bitcoin-themed Nethack server with Lightning payments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "aiosqlite>=0.19.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]

[project.scripts]
orange-nethack-api = "orange_nethack.api.main:run"
orange-nethack-monitor = "orange_nethack.game.monitor:run"
orange-nethack-cli = "orange_nethack.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/orange_nethack"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
